# boxes

./: README.md  index.css  index.html  package-lock.json  package.json
.github/workflows/: build-binaries.yml  release-and-site.yml  (+1 more)
ai-service/: package-lock.json  package.json  server.js
config/: .env.development  playwright.config.ts  postcss.config.js  tailwind.config.js  vite.config.ts
database-service/: package-lock.json  package.json  server.js
oauth-service/: package-lock.json  package.json  server.js
project-essentials/: App.tsx  docker-compose.evolution.yml  index.html  index.tsx  package-lock.json  package.json
project-essentials/src-tauri/: Cargo.toml  entitlements.plist  package-lock.json
project-essentials/src-tauri/capabilities/: dev-capability.json  localhost-capability.json  main-capability.json
project-essentials/src-tauri/src/: calendar_commands.rs  document_commands.rs  errors.rs  oauth_service_client.rs  project_commands.rs  slack_service_client.rs  whatsapp.rs  whatsapp_process_manager.rs
project-essentials/src-tauri/src/commands/: ai_automation.rs  background_sync_commands.rs  debug_commands.rs  mod.rs  settings.rs  slack_commands.rs  slack_integration.rs  user_management.rs
queue-service/: .env.example  package-lock.json  package.json
slack-service/: package-lock.json  package.json  server.js
socket-service/: .env.example  package-lock.json  package.json
src/: routes.tsx  store.ts
src-tauri/: .taurignore  Cargo.toml  entitlements.plist  package.json  tauri.conf.json
whatsapp-service/: package-lock.json  package.json
(+475 files in other folders)
