[package]
name = "project-boxes"
version = "0.1.0"
description = "Gestor de Caixas - Project Management App"
authors = ["you"]
edition = "2021"

[lib]
name = "project_boxes_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "project-boxes"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }
specta = { version = "1.0.5", features = ["typescript", "functions"] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-keyring = "0.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
tokio-rustls = "0.24"
rustls-pemfile = "1.0"
rcgen = "0.11"
base64 = "0.21"
dirs = "5.0"
rusqlite = { version = "0.31", features = ["bundled"] }
once_cell = "1.19"
open = "5.0"
specta = { version = "1.0.5", features = ["typescript", "functions"] }
headless_chrome = "1.0"
qrcode = "0.14"
image = "0.24"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
futures = "0.3"
tokio-cron-scheduler = "0.9"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-shell = "2"
